# Game_Engine_3D_Ogre_Next

./: .gitignore  CMakeLists.txt  README.md  build.bat
Assets/: HudMaterials.material
src/: EmptyProject.cpp
src/Game/: EmptyProjectGameState.cpp
